--- a/index.html
+++ b/index.html
@@ -1,33 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barangay Management System - Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Barangay Management System - Login</title>
 
-    <!-- Firebase SDK -->
-    <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-database.js"></script>
-    
-    <link rel="stylesheet" href="css/style.css">
+  <!-- Firebase SDK -->
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.4.0/firebase-database.js"></script>
+
+  <link rel="stylesheet" href="css/style.css" />
+
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url('images1/backgound.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    @keyframes pulse-glow {
+      0%, 100% {
+        text-shadow: 0 0 5px #00aaff, 0 0 10px #00aaff, 0 0 15px #00aaff;
+      }
+      50% {
+        text-shadow: 0 0 10px #00aaff, 0 0 20px #00aaff, 0 0 30px #00aaff;
+      }
+    }
+
+    .glow-title {
+      font-size: 28px;
+      color: white;
+      margin: 20px 0 30px;
+      animation: pulse-glow 2s infinite ease-in-out;
+    }
+
+    .login-container {
+      background: rgba(255, 255, 255, 0.2);
+      padding: 60px;
+      border-radius: 12px;
+      width: 420px;
+      text-align: center;
+      position: relative;
+      z-index: 1;
+      font-size: 18px;
+      color: white;
+      border: 2px solid rgba(0, 123, 255, 0.6);
+      box-shadow: 0 0 10px #007bff, 0 0 20px #007bff, 0 0 30px #007bff;
+      animation: pulse-glow 2s infinite ease-in-out;
+      margin: 40px 20px;
+    }
+
+    .login-container .logo {
+      display: block;
+      margin: 0 auto;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+    }
+
+    #login-form {
+      width: 100%;
+    }
+
+    #login-form input,
+    #login-form button {
+      display: block;
+      width: 100%;
+      margin: 16px 0;
+      padding: 16px;
+      font-size: 18px;
+      border-radius: 6px;
+      box-sizing: border-box;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    #login-form input {
+      border: 1px solid #ccc;
+    }
+
+    #login-form input:focus {
+      border-color: #007bff;
+      outline: none;
+      box-shadow: 0 0 10px #007bff, 0 0 20px #007bff, 0 0 30px #007bff;
+    }
+
+    #password-container {
+      position: relative;
+    }
+
+    #toggle-password {
+      position: absolute;
+      right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      font-size: 18px;
+      color: #ccc;
+      user-select: none;
+    }
+
+    #login-form button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      animation: pulse-glow 2s infinite ease-in-out;
+      margin-top: 30px;
+    }
+
+    #login-form button:hover {
+      background-color: #0056b3;
+    }
+
+    #error-message {
+      color: #ffdddd;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
 
-<div class="login-container">
-    <h2>Login</h2>
-    <form id="login-form">
-        <input type="text" id="username" placeholder="Username" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-    <p id="error-message" style="color:red;"></p>
-</div>
+  <div class="login-container">
+    <img src="images/villasis.jpg" alt="Barangay Logo" class="logo" />
 
-<!-- Load Only Necessary Scripts -->
-<script type="module" src="firebase-config.js"></script>
-<script type="module" src="js/login.js"></script>
+    <h2 class="glow-title">BARANGAY PORTAL</h2>
+
+    <form id="login-form">
+      <input type="text" id="email" placeholder="email" required />
+
+      <div id="password-container">
+        <input type="password" id="password" placeholder="Password" required />
+        <span id="toggle-password">👁️</span>
+      </div>
+
+      <button type="submit">Login</button>
+    </form>
+
+    <p id="error-message"></p>
+  </div>
+
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="js/login.js"></script>
+
+  <script>
+    const passwordInput = document.getElementById("password");
+    const toggleIcon = document.getElementById("toggle-password");
+
+    toggleIcon.addEventListener("click", () => {
+      const type = passwordInput.getAttribute("type") === "password" ? "text" : "password";
+      passwordInput.setAttribute("type", type);
+      toggleIcon.textContent = type === "password" ? "👁️" : "🙈";
+    });
+  </script>
 
 </body>
 </html>
